# kernel-anvil

./: MANIFEST.in  README.md  pyproject.toml
docs/: reddit-feedback.md
kernel_anvil/: autoforge.py  cli.py  codegen.py  hip_codegen.py  llama_sweep.py  mobile.py  model.py  rdna3.py  train_codegen.py  train_param_space.py  train_shapes.py  verify.py  vulkan_mobile_sweep.py
patches/: README.md  smithy-config.h
tests/: test_codegen.py  test_gguf.py  test_gguf_optimize.py  test_llama_sweep.py  test_mobile.py  test_model.py  test_rdna3.py  test_train_cli.py  test_train_codegen.py  test_train_shapes.py  test_vulkan_mobile_sweep.py
